# CS100_fa18_ShanghaiTech

./: README.md
CS100 Homework/C/: hw1_1.c  hw1_2.c  hw1_3.c  hw2_1.c  hw2_2.c  hw2_3.c  hw3_1.c  hw3_2.c  tutorial_1_3.c
CS100 Homework/C++/: hw3_3.cpp  hw3_4.cpp  hw4_1.cpp  hw4_2.cpp  hw4_3.cpp
CS100 Homework/Python/: Rain.py  generator.py  generator2.py  hw5.py  hw5_xushj.py  hw6.py  hw6_exec().py
CS100 Lectures/C++/CS100_Tutorial5_solution/Problem1/: Screen.hpp
CS100 Lectures/C++/CS100_Tutorial5_solution/Problem2/: Computer.cpp  Computer.hpp  Screen.hpp
CS100 Lectures/C++/CS100_Tutorial5_solution/Problem3/: Computer.hpp  Laptop.hpp  main.cpp
CS100 Lectures/CS100 tutorial/: GitLab使用教程.pptx  tutorial11-12-17.pptx  tutorial2-10-15.pptx  tutorial3-10-22.pptx  tutorial4-10-29.pptx  tutorial5-11-03.pptx  tutorial8-11-26.pptx  代码演示-10-08.pptx
CS100 Lectures/CS100 tutorial/code/C/: CMakeLists.txt  main.c
CS100 Lectures/CS100 tutorial/code/C++/20181103/: README.md
CS100 Lectures/CS100 tutorial/code/C++/20181103/mine/: CMakeLists.txt  main.cpp
CS100 Lectures/CS100 tutorial/code/C++/20181103/mine/OPP_Intro/: Circle.cpp  Rectangle.cpp  Shape.cpp  Triangle.cpp  types.h
CS100 Lectures/CS100 tutorial/code/C++/20181103/mine/tutorial/: Computer.cpp  Computer.h  Laptop.cpp  Laptop.h  Screen.cpp  Screen.h
CS100 Lectures/CS100 tutorial/code/C++/20181119/: Histogram.hpp  Histogram_impl.hpp  Timer.hpp  problem1.cpp  problem2.cpp  problem3.cpp  problem4.cpp  problem5.cpp
CS100 Lectures/CS100 tutorial/code/C++/20181203/: problem1.cpp  problem2.cpp  problem3.cpp
(+33 files in other folders)
